--- a/marketplace/src/app/components/subscribe/subscribe.component.html
+++ b/marketplace/src/app/components/subscribe/subscribe.component.html
@@ -1,9 +1,10 @@
 <div class="container">
-  <div class="card" style="width: 18rem;">
-    <div class="card-body">
-      <h5 class="card-title">Basic Plan</h5>
-      <p class="card-text">Quick way to get more items</p>
-      <a (click)="subscribe()" class="btn btn-primary">Subscribe</a>
-    </div>
+<div class="row d-flex justify-content-center">
+  <div class="col-md-12">
+    <h2>Markplace</h2>
+    <h3>The VoidDeck MamaShop for every Singaporean</h3>
+    
   </div>
+
+</div>
 </div>
