--- a/marketplace/src/app/components/item-details/item-details.component.html
+++ b/marketplace/src/app/components/item-details/item-details.component.html
@@ -11,7 +11,7 @@
           </ul>
         </div>
         <div class="col-4">
-          <img style="width: 400px;" src="{{url}}/{{displayImage}}">
+        <img style="width: 400px;" src="{{url}}/{{displayImage}}">
         </div>
       </div>
     </div>
@@ -20,12 +20,23 @@
         <div class="card-body">
           <h5 class="card-title">{{itemDetails.title}}</h5>
           <p class="card-text">{{itemDetails.description}}</p>
-          <p>{{itemDetails.price | currency}}</p>
-          <p>{{itemDetails.timestamp | date}}</p>
-          <p>{{itemDetails.condition}}</p>
-          <p>{{itemDetails.category}}</p>
-          <p>{{itemDetails.paymentMethod}}</p>
-          <p>{{itemDetails.dealMethod}}</p>
+          <p>Price: {{itemDetails.price | currency}}</p>
+          <p>Posted: {{itemDetails.timestamp | date}}</p>
+          <p>Condition: {{itemDetails.condition}}</p>
+          <p>Category: {{itemDetails.category}}</p>
+          <!-- <p>{{itemDetails.paymentMethod}}</p> -->
+          <!-- <p>{{itemDetails.dealMethod}}</p> -->
+          <form [formGroup]="form" (ngSubmit)="addItem()">
+            <label for="">Qty:</label>
+            <select class="form-control" formControlName="qty">
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+            </select>
+            <button class="mt-3 btn btn-info"[disabled]="form.invalid" type="submit">Add to Cart</button>
+          </form>
         </div>
       </div>
     </div>
