--- a/marketplace/src/app/components/login/login.component.html
+++ b/marketplace/src/app/components/login/login.component.html
@@ -26,7 +26,7 @@
     <div class="col-md-6">
       <form [formGroup]="form" (ngSubmit)="login()">
         <div class="form-group">
-          <input type="text" class="form-control" formControlName="username" placeholder="username" />
+          <input type="email" class="form-control" formControlName="username" placeholder="email" />
         </div>
         <div class="form-group">
           <input type="password" class="form-control" placeholder="password" formControlName="password" />
