--- a/marketplace/src/app/components/searchbar/searchbar.component.html
+++ b/marketplace/src/app/components/searchbar/searchbar.component.html
@@ -6,16 +6,27 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav ml-auto">
       <li *ngIf="!hasToken" class="nav-item">
-        <a class="nav-link" [routerLink]="['/login']">Login/Sign Up</a>
+        <a class="nav-link" [routerLink]="['/login']">Login</a>
+      </li>
+      <li *ngIf="!hasToken" class="nav-item">
+        <a class="nav-link" [routerLink]="['/signup']">Sign Up</a>
       </li>
       <li *ngIf="hasToken" class="nav-item">
-        <a class="nav-link" [routerLink]="['/subscribe']">Subscribe</a>
+        <a class="nav-link" [routerLink]="['/main']">Main</a>
       </li>
-
+      <li *ngIf="hasToken" class="nav-item">
+        <a class="nav-link" [routerLink]="['/sell']">Post</a>
+      </li>
+      <li *ngIf="hasToken" class="nav-item">
+        <a class="nav-link" [routerLink]="['/cart']">Checkout</a>
+      </li>
+      <li *ngIf="hasToken" class="nav-item">
+        <a class="nav-link" (click)="logout()">Logout</a>
+      </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0" [formGroup]="form" (ngSubmit)="search()">
+    <form *ngIf="hasToken" class="form-inline my-2 my-lg-0" [formGroup]="form" (ngSubmit)="search()">
       <input class="form-control mr-sm-2" type="search" formControlName="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
