google auth signup working

--- a/marketplace/src/app/components/signup/signup.component.html
+++ b/marketplace/src/app/components/signup/signup.component.html
@@ -3,7 +3,7 @@
       class="row d-flex align-items-center justify-content-center"
       style="height: 200px"
     >
-      <a type="button" class="google-button" (click)="loginGoogle()">
+      <a type="button" class="google-button" (click)="signupGoogle()">
         <img src="assets/g-logo.png" class="google-logo" alt="" />
         <span class="google-font">Sign up with Google</span>
       </a>
