--- a/marketplace/src/app/components/item-details/item-details.component.html
+++ b/marketplace/src/app/components/item-details/item-details.component.html
@@ -1,5 +1,12 @@
 <div class="container">
-  <div class="row" *ngIf="itemDetails.category">
+
+  <div *ngIf="message" class="alert alert-success alert-dismissible fade show" role="alert">
+    {{message}}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="mt-3 row" *ngIf="itemDetails.category">
     <a [routerLink]="['/categories',itemDetails.category.toLowerCase()]">{{itemDetails.category}}</a>
   </div>
   <div class="row mt-3">
