--- a/marketplace/src/app/components/post-item/post-item.component.html
+++ b/marketplace/src/app/components/post-item/post-item.component.html
@@ -66,7 +66,7 @@
             <option value="googlepay">GooglePay</option>
           </select>
         </div>
-        <button class="submnit" type="submit">Post</button>
+      <button class="submit btn btn-info" type="submit">Post</button>
       </form>
       <div *ngIf="errorMessage">{{errorMessage}}</div>
     </div>
