clean up the login and signup

--- a/marketplace/src/app/components/signup/signup.component.html
+++ b/marketplace/src/app/components/signup/signup.component.html
@@ -29,6 +29,9 @@
                     <input type="email" class="form-control" formControlName="username" placeholder="email" />
                 </div>
                 <div class="form-group">
+                  <input type="text" class="form-control" formControlName="name" placeholder="name" />
+                </div>
+                <div class="form-group">
                     <input type="password" class="form-control" placeholder="password" formControlName="password" />
                 </div>
                 <div class="form-group">
