--- a/marketplace/src/app/components/item-details/item-details.component.html
+++ b/marketplace/src/app/components/item-details/item-details.component.html
@@ -7,7 +7,7 @@
     </button>
   </div>
   <div class="mt-3 row" *ngIf="itemDetails.category">
-    <a [routerLink]="['/categories',itemDetails.category.toLowerCase()]">{{itemDetails.category}}</a>
+    <a [routerLink]="['/categories',itemDetails.category.toLowerCase()]">{{itemDetails.category | titlecase }}</a>
   </div>
   <div class="row mt-3">
     <div class="col-6">
@@ -29,8 +29,8 @@
           <p class="card-text">{{itemDetails.description}}</p>
           <p>Price: {{itemDetails.price | currency}}</p>
           <p>Posted: {{itemDetails.timestamp | date}}</p>
-          <p>Condition: {{itemDetails.condition}}</p>
-          <p>Category: {{itemDetails.category}}</p>
+          <!-- <p>Condition: {{itemDetails.condition}}</p> -->
+          <p>Category: {{itemDetails.category | titlecase }}</p>
           <!-- <p>{{itemDetails.paymentMethod}}</p> -->
           <!-- <p>{{itemDetails.dealMethod}}</p> -->
           <form [formGroup]="form" (ngSubmit)="addItem()">
