--- a/marketplace/src/app/components/searchbar/searchbar.component.html
+++ b/marketplace/src/app/components/searchbar/searchbar.component.html
@@ -13,7 +13,7 @@
         <a class="nav-link" [routerLink]="['/main']"><i class="fas fa-store-alt"></i></a>
       </li>
       <li *ngIf="hasToken && role==1" class="nav-item">
-        <a class="nav-link" [routerLink]="['/sell']">Post</a>
+        <a class="nav-link" [routerLink]="['/sell']"><i class="fas fa-file-upload"></i></a>
       </li>
     </ul>
     <ul class="navbar-nav auto">
