--- a/marketplace/src/app/components/account/account.component.html
+++ b/marketplace/src/app/components/account/account.component.html
@@ -3,43 +3,40 @@
     <thead>
         <th>#</th>
         <th>Payment Status</th>
-            <th>
-                <div class="table-borderless">
-                    <col width="100px" />
-                        <col width="70px" />
-                        <col width="70px" />
-            <td colspan="">Item</td>
-            <td colspan="">Qty</td>
-            <td colspan="">Price</td>
-        </div>
-    </th>
+        <th>
+            <div class="table-borderless">
+                        <col width="100px" />
+                        <col width="100px" />
+                        <col width="100px" />
+                <td colspan="">Item</td>
+                <td colspan="">Qty</td>
+                <td colspan="">Price</td>
+            </div>
+        </th>
         <th>Order Date</th>
     </thead>
     <tbody>
         <tr *ngFor="let order of orders; let index=index">
             <td>{{index+1}}</td>
             <td>{{order.payment_status | uppercase}}</td>
-
             <!-- <td > -->
                 <!-- <table class="table table-bordered"> -->
-                  
-                   
                     <!-- <tbody> -->
                     <div *ngFor="let item of order.order">
                         <col width="100px" />
-                        <col width="70px" />
-                        <col width="70px" />
+                        <col width="100px" />
+                        <col width="100px" />
                         <tbody>
-                        <td colspan="2">
-                            {{item.title}}
-                        </td>
-                        <td colspan="2">
-                            {{item.qty}}
-                        </td>
-                        <td colspan="2">
-                            {{item.price* item.qty}}
-                        </td>
-                    </tbody>
+                            <td colspan="2">
+                                {{item.title}}
+                            </td>
+                            <td colspan="2">
+                                {{item.qty}}
+                            </td>
+                            <td colspan="2">
+                                {{item.price* item.qty | currency}}
+                            </td>
+                        </tbody>
                     </div>
                 <!-- </tbody>
                 </table>
