--- a/marketplace/src/app/components/landing/landing.component.html
+++ b/marketplace/src/app/components/landing/landing.component.html
@@ -3,3 +3,8 @@
 </div>
 <h1 style="z-index: 1; position: absolute; top: 100px; left:100px">The shop every singaporean needs</h1>
 <h3 style="z-index: 1; position: absolute; top: 200px; left:100px">Psst the best things are inside!!</h3>
+<div *ngIf="weather" style="z-index: 1; position: absolute; top: 300px; left:100px">
+  <h3>{{weather.temp}} °C</h3>
+  <h3>{{weather.description}}</h3>
+  <img style="z-index: 1; height:100px;width: 100px;"src="{{url}}{{weather.icon}}@2x.png">
+</div>
