--- a/marketplace/src/app/components/display-items/display-items.component.html
+++ b/marketplace/src/app/components/display-items/display-items.component.html
@@ -1,17 +1,71 @@
-<div class="container mt-3" >
-  <div class="row">
-      <div class="card-group" *ngFor="let item of marketplace">
-        <div [routerLink]="['/item',item._id]"class="card custom-class mt-3 mr-3">
-          <div style="height:70%">
-          <img src="{{url}}/{{item.images}}" style="width:100%; height:auto" class="card-img-top">
-        </div>
-          <div class="card-body">
-            <h5 class="card-title">{{item.title}}</h5>
-            <p class="card-text">{{item.description}}</p>
-            <p class="card-text">S{{item.price|currency}}</p>
-            <p>Posted: {{item.timestamp|date}}</p>
+<div class="container-fluid mt-3" >
+  <!-- <div class="row"> -->
+    <div *ngFor="let item of marketplace; let index = index">
+      <div *ngIf="index % 4 == 0" class="row">
+        <div class="card-group col-md-3" >
+          <div [routerLink]="['/item',item._id]"class="card custom-class mt-3 mr-3">
+            <img src="{{url}}/{{item.images}}" style="width:100%; height:50%" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title">{{item.title}}</h5>
+              <p class="card-text">{{item.description}}</p>
+              <p class="card-text">S{{item.price|currency}}</p>
+              <p>Posted: {{item.timestamp|date}}</p>
+            </div>
           </div>
         </div>
+        <div class="col-md-3" *ngIf="index + 1 < marketplace.length">
+          <div class="card-group" >
+            <div [routerLink]="['/item',marketplace[index + 1]._id]"class="card custom-class mt-3 mr-3">
+              <img src="{{url}}/{{marketplace[index + 1].images}}" style="width:100%; height:50%" class="card-img-top">
+              <div class="card-body">
+                <h5 class="card-title">{{marketplace[index + 1].title}}</h5>
+                <p class="card-text">{{marketplace[index + 1].description}}</p>
+                <p class="card-text">S{{marketplace[index + 1].price|currency}}</p>
+                <p>Posted: {{marketplace[index + 1].timestamp|date}}</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3" *ngIf="index + 2 < marketplace.length">
+          <div class="card-group" >
+            <div [routerLink]="['/item',marketplace[index + 2]._id]"class="card custom-class mt-3 mr-3">
+              <img src="{{url}}/{{marketplace[index + 2].images}}" style="width:100%; height:50%" class="card-img-top">
+              <div class="card-body">
+                <h5 class="card-title">{{marketplace[index + 2].title}}</h5>
+                <p class="card-text">{{marketplace[index + 2].description}}</p>
+                <p class="card-text">S{{marketplace[index + 2].price|currency}}</p>
+                <p>Posted: {{marketplace[index + 2].timestamp|date}}</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3" *ngIf="index + 3 < marketplace.length">
+          <div class="card-group" >
+            <div [routerLink]="['/item',marketplace[index + 3]._id]"class="card custom-class mt-3 mr-3">
+              <img src="{{url}}/{{marketplace[index + 3].images}}" style="width:100%; height:50%" class="card-img-top">
+              <div class="card-body">
+                <h5 class="card-title">{{marketplace[index + 3].title}}</h5>
+                <p class="card-text">{{marketplace[index + 3].description}}</p>
+                <p class="card-text">S{{marketplace[index + 3].price|currency}}</p>
+                <p>Posted: {{marketplace[index + 3].timestamp|date}}</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- <div class="card-group col-md-3">
+          <div [routerLink]="['/item',item._id]"class="card custom-class mt-3 mr-3">
+            <div style="height:70%">
+              <img src="{{url}}/{{item.images}}" style="width:100%; height:auto" class="card-img-top">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">{{item.title | titlecase }}</h5>
+              <p class="card-text">{{item.description}}</p>
+              <p class="card-text">S{{item.price|currency}}</p>
+              <p>Posted: {{item.timestamp|date}}</p>
+            </div>
+          </div>
+        </div> -->
       </div>
-  </div>
+    </div>
+  <!-- </div> -->
 </div>
