--- a/marketplace/src/app/components/search-items/search-items.component.html
+++ b/marketplace/src/app/components/search-items/search-items.component.html
@@ -1,6 +1,8 @@
-<div class="container mt-3" >
+<div class="container-fluid mt-3 mr-3" >
   <div class="row" *ngIf="category">
-    <a [routerLink]="['/categories',category]">{{category | titlecase}}</a>
+    <div class="col-md-3">
+      <a [routerLink]="['/categories',category]">{{category | titlecase}}</a>
+    </div>
   </div>
   <div *ngFor="let item of results; let index = index">
       <div *ngIf="index % 4 == 0" class="row">
