--- a/marketplace/src/app/components/landing/landing.component.css
+++ b/marketplace/src/app/components/landing/landing.component.css
@@ -1,3 +1,62 @@
-img {
-  width:100vw
+.bg {
+  position:absolute; 
+  opacity: 1; 
+  z-index: -1; 
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; 
+  height: 100vh;
+  width: 100%;
+}
+.layer{
+  z-index:1;
+  /* position: relative; */
+}
+
+.text{
+  height: 100vh;
+  width: 100%;
+}
+.weather-icon{
+  z-index: 1; 
+  /* height:100px;
+  width: 100px; */
+}
+.action-heading{
+  z-index: 1; 
+  position: relative; 
+  /*top: 100px; 
+  left:100px */
+}
+.action-sub-heading{
+  z-index: 1; 
+  position: relative; 
+  /*top: 200px; 
+  left:100px */
+}
+.weather-info{
+  z-index: 1; 
+  position: relative; 
+  /* top: 300px; 
+  left:100px */
+}
+@media only screen and (max-width: 768px) {
+  .action-heading{
+    z-index: 1; 
+    /* position: absolute; 
+    top: 100px; 
+    left:100px */
   }
+  .action-sub-heading{
+    z-index: 1; 
+    /* position: absolute; 
+    top: 200px; 
+    left:100px */
+  }
+  .weather-info{
+    z-index: 1; 
+    /* position: absolute; 
+    top: 300px; 
+    left:100px */
+  }
+}
