--- a/marketplace/src/app/components/landing/landing.component.html
+++ b/marketplace/src/app/components/landing/landing.component.html
@@ -1,10 +1,42 @@
-<div  style="background-color: rgba(255,0,0,0.1);">
-  <img  src="assets/mamashop.jpg" style="position:relative; opacity: 0.5 ; z-index: -1;">
-</div>
-<h1 style="z-index: 1; position: absolute; top: 100px; left:100px">The shop every singaporean needs</h1>
-<h3 style="z-index: 1; position: absolute; top: 200px; left:100px">Psst the best things are inside!!</h3>
-<div *ngIf="weather" style="z-index: 1; position: absolute; top: 300px; left:100px">
-  <h3>{{weather.temp}} °C</h3>
-  <h3>{{weather.description}}</h3>
-  <img style="z-index: 1; height:100px;width: 100px;"src="{{url}}{{weather.icon}}@2x.png">
-</div>
+<!-- <div>
+  <img  src="assets/mamashop3.jpeg" 
+  class="bg">
+  <div class="mask" style="background-color: rgba(0, 0, 0, 0.6)">
+    <div class="d-flex justify-content-center align-items-center h-100">
+      <div class="text-white">
+        <h1 class="mb-3">The shop every singaporean needs</h1>
+        <h4 class="mb-3">Psst the best things are inside!!</h4>
+        <a class="btn btn-outline-light btn-lg" href="#!" role="button"
+          >Enter now</a
+        >
+      </div>
+    </div>
+  </div>
+  <h1 >The shop every singaporean needs</h1>
+  <h3 >Psst the best things are inside!!</h3>
+ 
+</div> -->
+
+
+  
+
+  <!-- Background image -->
+  <div style="background-image: url('/assets/mamashop4.jpg');" class="bg text-center">
+    <!-- <img  src="assets/mamashop3.jpeg" class="bg"> -->
+    <div class="mask layer" style="background-color: rgba(0, 0, 0, 0.6)">
+      <div class="d-flex justify-content-center align-items-center text">
+        <div class="text-white">
+          <h1 class="mb-3">That shop every Singaporean needs</h1>
+          <h4 class="mb-3">Psst the best things are inside</h4>
+          <div *ngIf="weather">
+            <h5 class="mb-3">{{weather.description}}<img class="weather-icon" src="{{url}}{{weather.icon}}@2x.png"></h5>
+            <h5 class="mb-3">{{weather.temp}} °C</h5>
+          </div>
+          <a class="btn btn-outline-light btn-lg" [routerLink]="[ '/signup' ]" role="button"
+            >Enter now</a
+          >
+        </div>
+      </div>
+    </div>
+  </div>
+
